feat: add steel controller/model